<resources>
    <string name="app_name">SecondHand</string>
    <string name="_3s">3s后自动跳转</string>

    <string name="adapter_recycler_deal_type_none_text">没有交易记录</string>
    <string name="adapter_recycler_deal_type_none_no_sign">没有登入</string>

    <string name="adapter_recycler_deal_type_have_name">名字</string>
    <string name="adapter_recycler_deal_type_have_type">类型</string>
    <string name="adapter_recycler_deal_type_have_my">(拥有者)</string>
    <string name="adapter_recycler_deal_type_have_change">(交换者)</string>


    <string name="activity_book_toolbar_title">图书信息</string>
    <string name="activity_book_card_title">图书信息</string>
    <string name="activity_book_comment_title">评论</string>
    <string name="activity_book_comment_submit">发表</string>
    <string name="activity_book_comment_edit_hint">说点什么吧…</string>
    <string name="activity_book_buy">购买</string>
    <string name="activity_book_change">交换</string>
    <string name="activity_book_dialog_title">请确认…</string>

    <string name="adapter_recycler_comment_type_none_text">暂无评论…</string>
    <string name="adapter_recycler_my_book_type_none_text">暂无图书…</string>


    <string name="activity_my_book_title">请选择交换的图书</string>
    <string name="activity_my_book_change">交换</string>


    <string name="adapter_recycler_my_message_type_none_text">您没有评论…</string>

    <string name="activity_my_message_title">我的评论</string>

    <string name="book_info_two_down">下架</string>

</resources>
