<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:id="@+id/activity_book_toolbar"
        app:title="@string/activity_book_toolbar_title">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:id="@+id/activity_book_buy"
            android:text="@string/activity_book_change"
            android:padding="5dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/text_border"/>
    </android.support.v7.widget.Toolbar>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/activity_book_comment_container"
        android:layout_alignParentBottom="true"
        android:padding="2dp"
        android:focusable="true"
        android:focusableInTouchMode="true">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/activity_book_comment_submit"
            android:layout_alignParentEnd="true"
            android:textSize="12sp"
            android:layout_alignParentBottom="true"
            android:text="@string/activity_book_comment_submit"
            android:background="@drawable/comment_submit_button_bg"
            android:enabled="false"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/activity_book_comment_edit"
            android:background="@null"
            android:hint="@string/activity_book_comment_edit_hint"
            android:textSize="12sp"
            android:maxLines="2"
            android:layout_toStartOf="@id/activity_book_comment_submit"
            android:layout_marginEnd="3dp" />
    </RelativeLayout>


    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/activity_book_toolbar"
        android:layout_above="@id/activity_book_comment_container">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="20dp"
                        android:text="@string/activity_book_card_title"
                        android:textSize="22sp" />

                    <TextView
                        android:id="@+id/activity_book_book_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="20dp"
                        tools:text="图书名称"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/activity_book_book_type"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="20dp"
                        tools:text="图书类型"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/activity_book_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="20dp"
                        tools:text="联系邮箱"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/activity_book_book_introduction"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="20dp"
                        android:singleLine="false"
                        tools:text="简介"
                        android:textSize="16sp" />
                </LinearLayout>

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="120dp"
                    android:src="@mipmap/ic_launcher"
                    android:layout_gravity="end|top"
                    android:scaleType="fitXY"
                    android:id="@+id/activity_book_book_image"
                    android:layout_marginEnd="5dp"
                    android:layout_marginTop="5dp"/>
            </android.support.v7.widget.CardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:text="@string/activity_book_comment_title"
                android:textSize="13sp"
                android:padding="2dp"
                android:background="@drawable/text_border"/>

            <com.scwang.smartrefresh.layout.SmartRefreshLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/activity_book_refresh_layout">

                <com.scwang.smartrefresh.layout.header.ClassicsHeader
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <android.support.v7.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/activity_book_comment"/>
            </com.scwang.smartrefresh.layout.SmartRefreshLayout>


        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>



</RelativeLayout>